fixed padding og margins på collapsed titles

--- a/css/layout.css
+++ b/css/layout.css
@@ -505,4 +505,5 @@ th {
 
 .collapsible-list .title-collapsible.collapsed {
   background-image: url(../images/arrow-right-black.png);
+  padding-bottom: 12px;
 }
